# OpenSCAD

./: .actrc  .gitignore  .hgtags  Makefile  OpenSCAD.cabal  README.md  UnitTest.hs  cabal.haskell-ci  default.nix  shell.nix  stack-lts-18.yaml  stack-lts-19.yaml  stack.yaml
.github/workflows/: cachix.yaml  haskell-ci.yml
.github/workflows/events/: pull_request.json
Graphics/: OpenSCAD.hs
Graphics/OpenSCAD/: Unicode.hs
bench/: Bench.hs
nix/: sources.json
src/: .dir-locals.el
src/Graphics/: OpenSCAD.hs
src/Graphics/OpenSCAD/: Unicode.hs
test/: .dir-locals.el  UnitTest.hs
