name:            OpenSCAD
version:         0.5.0.0
cabal-version:   1.18
build-type:      Simple
license:         BSD3
license-file:    LICENSE
copyright:
  (c) 2014-2015 Mike Meyer (mwm@mired.org)
  (c) 2021-2022 Brecht Serckx (services+hackage@brechtserckx.be)

author:          Mike Meyer
maintainer:      Brecht Serckx (professional@brechtserckx.be)
homepage:        https://github.com/BrechtSerckx/OpenSCAD
bug-reports:     https://github.com/BrechtSerckx/OpenSCAD/issues
synopsis:        ADT wrapper and renderer for OpenSCAD models.
description:
  An algebraic data type for describing OpenSCAD models,
  functions to make building such models easier, and
  functions for rendering an ADT into an OpenSCAD program.

category:        Graphics
tested-with:     GHC ==8.6.5 || ==8.8.4 || ==8.10.7 || ==9.0.2 || ==9.2.2
extra-doc-files: README.md

library
  exposed-modules:
    Graphics.OpenSCAD
    Graphics.OpenSCAD.Unicode

  other-extensions:   UnicodeSyntax
  build-depends:
      base           >=4.5.0 && <5.0
    , colour         >=2.3   && <2.4
    , containers     >=0.5   && <0.7
    , filepath       >=1.3   && <1.5
    , iso639         >=0.1   && <1
    , prettyprinter  >=1.7   && <2
    , semigroups     >=0.15  && <1.0

  hs-source-dirs:     src
  ghc-options:        -Wall
  default-language:   Haskell2010
  default-extensions:
    LambdaCase
    TupleSections

test-suite OpenSCAD-tests
  type:             exitcode-stdio-1.0
  main-is:          UnitTest.hs
  build-depends:
      base         >=4.5.0 && <5.0
    , Cabal        >=1.18
    , colour       >=2.3
    , containers   >=0.5
    , deepseq      >=1.3
    , filepath     >=1.3
    , HUnit        >=1.2
    , iso639
    , OpenSCAD
    , semigroups   >=0.15  && <1.0
    , tasty        >=0.8
    , tasty-hunit  >=0.9

  hs-source-dirs:   test
  ghc-options:      -Wall -Wno-missing-signatures
  default-language: Haskell2010

source-repository head
  type:     git
  location: git://github.com/BrechtSerckx/OpenSCAD.git

benchmark OpenSCAD-bench
  type:             exitcode-stdio-1.0
  main-is:          Bench.hs
  build-depends:
      base         >=4.5.0 && <5.0
    , OpenSCAD
    , criterion
    , process

  hs-source-dirs:   bench
  ghc-options:      -Wall -Wno-missing-signatures
  default-language: Haskell2010